fix: use correct when clause for displaying delete node in context menu

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -731,7 +731,7 @@
           "group": "2_workspace"
         },
         {
-          "when": "resourceExtname == .md || resourceExtname == .yml && dendron:pluginActive",
+          "when": "(resourceExtname == .md || resourceExtname == .yml) && dendron:pluginActive",
           "command": "dendron.deleteNode",
           "group": "2_workspace"
         },
