--- a/packages/common-all/package.json
+++ b/packages/common-all/package.json
@@ -48,6 +48,7 @@
     "@types/yamljs": "^0.2.31",
     "axios": "^0.21.4",
     "dropbox": "^4.0.30",
+    "fast-levenshtein": "^3.0.0",
     "fuse.js": "^6.4.6",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
@@ -65,6 +66,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/fast-levenshtein": "^0.0.2",
     "@types/js-yaml": "^3.12.5",
     "@types/nanoid-dictionary": "^4.2.0",
     "coveralls": "^3.0.2",
