--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,10 @@ jobs:
         include:
           - os: macos-latest
             env: env
-            versions: ''
+            versions: ""
           - os: ubuntu-latest
             env: env
-            versions: ''
+            versions: ""
           # Running natively under Windows requires some further work on paths
           # and file access patterns.
           - os: windows-latest
@@ -52,8 +52,8 @@ jobs:
 
     steps:
       - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H:%M:%S')"
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H:%M:%S')"
 
       - name: Log date
         run: echo "${{ steps.date.outputs.date }}"
@@ -151,7 +151,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           build: "yarn run template:export"
-          start: "yarn run template:start" 
+          start: "yarn run template:start"
           project: ./packages/nextjs-template
 
       - name: Run tests
