--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,7 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node-version }}-node-modules-1-${{ hashFiles('yarn.lock')}}
 
       - name: Restore Node modules cache for Windows
-        if: runner.os == 'Windows && steps.last_run_status.outputs.last_run_status != 'success''
+        if: runner.os == 'Windows' && steps.last_run_status.outputs.last_run_status != 'success'
         uses: actions/cache@v2
         id: node-modules-cache-windows
         with:
