chore(actions): Test improvements for github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-yarn-
 
+      - name: Save restore node status non-windows
+        if: runner.os != 'Windows' && steps.last_run_status.outputs.last_restore_node_status != 'success'
+        run: echo "::set-output name=last_restore_node_status::${{ steps.node-modules-cache.outcome }}" > last_restore_node_status
+
+      - name: Save restore node status windows
+        if: runner.os == 'Windows' && steps.last_run_status.outputs.last_restore_node_windows_status != 'success'
+        run: echo "::set-output name=last_restore_node_windows_status::${{ steps.node-modules-cache-windows.outcome }}" > last_restore_node_windows_status
+
       - name: Set up Node.js ${{ matrix.node-version }}
         if: steps.last_run_status.outputs.last_run_status != 'success'
         uses: actions/setup-node@v1
@@ -127,9 +135,14 @@ jobs:
           git config --global user.email ci@dendron.so
 
       - name: Initialize
+        id: init_run
         if: steps.last_run_status.outputs.last_run_status != 'success'
         run: yarn ci:init
         shell: bash
+
+      - name: Save initialize run status
+        if: steps.last_run_status.outputs.last_init_status != 'success'
+        run: echo "::set-output name=last_init_status::${{ steps.init_run.outcome }}" > last_init_status
 
       - name: Start Xvfb
         if: runner.os == 'Linux' && matrix.suite == 'plugin' && steps.last_run_status.outputs.last_run_status != 'success'
