--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
       # Retain Node modules across builds; some packages download/build binaries
       # here.
       - name: Restore Node modules cache
-        if: runner.os != 'Windows' && steps.last_run_status.outputs.last_run_status != 'success'
+        if: runner.os != 'Windows' && steps.last_run_status.outputs.last_restore_node_status != 'success'
         uses: actions/cache@v2
         id: node-modules-cache
         with:
@@ -105,7 +105,7 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node-version }}-node-modules-1-${{ hashFiles('yarn.lock')}}
 
       - name: Restore Node modules cache for Windows
-        if: runner.os == 'Windows' && steps.last_run_status.outputs.last_run_status != 'success'
+        if: runner.os == 'Windows' && steps.last_run_status.outputs.last_restore_node_windows_status != 'success'
         uses: actions/cache@v2
         id: node-modules-cache-windows
         with:
@@ -136,7 +136,7 @@ jobs:
 
       - name: Initialize
         id: init_run
-        if: steps.last_run_status.outputs.last_run_status != 'success'
+        if: steps.last_run_status.outputs.last_init_status != 'success'
         run: yarn ci:init
         shell: bash
 
