--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -1,11 +1,11 @@
-# Creates a release branch off of master every Monday, 7 PM UTC
+# Creates a release branch off of master every Thursday, 7 PM UTC
 name: Create Release Branch
 
 # See documentation on POSIX cron syntax here: https://docs.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events
-# Scheduled to run at 7 PM UTC on Mondays
+# Scheduled to run at 7 PM UTC on Thursdays
 on:
   schedule:
-    - cron:  '0 19 * * 1'
+    - cron: "0 19 * * 4"
 
 jobs:
   build:
