--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,22 +71,29 @@ jobs:
           restore-keys: |
             ${{ github.run_id }}-${{ matrix.os }}-${{ matrix.node-version }}-${{ matrix.suite }}-
 
-      - name: Print files
-        shell: bash
-        run: |
-          echo "Cache hit: ${{steps.last_run.outputs.last_run_status}}"
-          echo "Cache hit: ${{steps.last_run.outputs.last_restore_node_status}}"
-          echo "Cache hit: ${{steps.last_run.outputs.last_restore_node_windows_status}}"
-
       - name: Set last run status
         id: last_run_status
         run: cat last_run_status
+
+      - name: Restore last run status
+        id: last_run_node
+        uses: actions/cache@v2
+        with:
+          path: |
+            last_restore_node_status
+          key: ${{ github.run_id }}-${{ matrix.os }}-${{ matrix.node-version }}-${{ matrix.suite }}-${{ steps.date.outputs.date }}
+          restore-keys: |
+            ${{ github.run_id }}-${{ matrix.os }}-${{ matrix.node-version }}-${{ matrix.suite }}-
+
+      - name: Set last run status
+        id: last_restore_node_status
+        run: cat last_restore_node_status
 
       - name: Print files
         shell: bash
         run: |
           echo "Cache hit: ${{steps.last_run_status.outputs.last_run_status}}"
-          echo "Cache hit: ${{steps.last_run_status.outputs.last_restore_node_status}}"
+          echo "Cache hit: ${{steps.last_restore_node_status.outputs.last_restore_node_status}}"
           echo "Cache hit: ${{steps.last_run_status.outputs.last_restore_node_windows_status}}"
 
       - name: Gather environment data
