--- a/.github/workflows/publish-extension-dendron.yml
+++ b/.github/workflows/publish-extension-dendron.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Configure Git user
         run: |
-          git config --global user.name github.actions
+          git config --global user.name github-actions
           git config --global user.email github-actions@github.com
 
       - name: Checkout source
