--- a/packages/engine-server/package.json
+++ b/packages/engine-server/package.json
@@ -67,6 +67,7 @@
     "mdast-builder": "^1.1.1",
     "mdast-util-compact": "^2.0.1",
     "mdast-util-inject": "^1.1.0",
+    "mime-types": "^2.1.34",
     "qs": "^6.10.1",
     "rehype-autolink-headings": "^5.0.1",
     "rehype-katex": "5",
@@ -98,6 +99,7 @@
   "devDependencies": {
     "@types/execa": "^2.0.0",
     "@types/lru-cache": "^5.1.1",
+    "@types/mime-types": "^2.1.1",
     "coveralls": "^3.0.2",
     "cross-env": "^7.0.2",
     "rimraf": "^2.6.2",
