--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -34,6 +34,7 @@
     "prepublishOnly": "yarn build",
     "prebuild": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "yarn compile",
+    "buildCI": "yarn compile",
     "compile": "tsc -b tsconfig.build.json --verbose",
     "test": "echo 'nop'",
     "test:unit:all": "cross-env LOG_LEVEL=error yarn test",
