--- a/package.json
+++ b/package.json
@@ -74,8 +74,9 @@
     "format:pkg": "prettier --write",
     "lint": "eslint . --ext ts,tsx",
     "lerna:typecheck": "lerna exec --parallel --ignore @dendronhq/dendron-next-server --ignore @dendronhq/common-assets --ignore @dendronhq/nextjs-template --ignore @dendronhq/dendron-11ty-legacy --ignore @dendronhq/dendron-plugin-views -- tsc -b tsconfig.build.json --noEmit --verbose",
-    "bootstrap:bootstrap": "npx yarn --network-timeout 600000 && yarn gen:meta",
+    "bootstrap:bootstrap": "npx yarn --network-timeout 600000 --frozen-lockfile && yarn gen:meta",
     "bootstrap:build": "node bootstrap/scripts/buildAll.js",
+    "bootstrap:buildCI": "node bootstrap/scripts/buildAllForTest.js",
     "bootstrap:build:fast": "yarn bootstrap:build:common-all && yarn bootstrap:build:common-server && yarn bootstrap:build:common-test-utils && yarn bootstrap:build:engine-server &&  yarn bootstrap:build:api-server && yarn bootstrap:build:engine-test-utils && yarn bootstrap:build:dendron-cli && yarn bootstrap:build:plugin-core",
     "bootstrap:build:": "npx lerna run build --scope",
     "bootstrap:build:nextjs-template": "yarn bootstrap:build: @dendronhq/nextjs-template",
